<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Active</string>

    <!-- <string name="facebook_app_id" translatable="false">422483854616848</string>
   -->
    <string name="facebook_app_id" translatable="false">1900598693487821</string>
    <string name="fb_login_protocol_scheme">fb1900598693487821</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="default_user">Unknown user</string>
    <string name="header_profile_pic">Profile Picture</string>

    <string name="nav_notifications">Notifications</string>
    <string name="menu_news">News Feed</string>
    <string name="menu_top_stories">Top stories</string>
    <string name="menu_most_recent">Most Recent</string>
    <string name="menu_friendreq">Friend Requests</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_search">Search</string>
    <string name="menu_mainmenu">Main Menu</string>

    <string name="menu_fblogin">Login to Facebook</string>
    <string name="menu_jump_top">Jump to Top</string>
    <string name="menu_refresh">Reload</string>
    <string name="menu_back">Back</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_settings">Settings</string>

    <string name="fab_text">Post a status</string>
    <string name="fab_photo">Post a photo</string>
    <string name="fab_checkin">Check In</string>

    <string name="context_save_image">Save image</string>
    <string name="context_share_image">Share image</string>
    <string name="context_copy_image_link">Copy image link</string>
    <string name="context_share_link">Share link</string>
    <string name="context_copy_link">Copy link</string>

    <string name="context_share_image_progress">Sharing image…</string>
    <string name="content_copy_link_done">Link copied to clipboard</string>

    <string name="notifications_setting_title">Notifications</string>

    <string name="notifications_enabled_title">Background Notifications</string>
    <string name="notifications_enabled_summary">When enabled, you will receive background notifications from Facebook.</string>

    <string name="notification_interval_title">Background Notifications interval</string>
    <string name="notification_interval_summary">Specify the update interval for the notification service.</string>
    <string-array name="notification_interval">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
    </string-array>
    <string-array name="notification_interval_values">
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
    </string-array>

    <string name="notifications_vibration_title">Vibrate</string>
    <string name="notifications_vibration_summary">When enabled, notifications will make your device vibrate.</string>

    <string name="content_setting_title">Content</string>

    <string name="location_enabled_title">Location access</string>
    <string name="location_enabled_summary">Enable this to allow Facebook to obtain your location.</string>

    <string name="most_recent_menu_title">Most Recent in Navigation Menu</string>
    <string name="most_recent_menu_summary">Enable this to show the Most Recent button in the Navigation Menu.</string>

    <string name="hide_editor_newsfeed_title">Hide Status editor in News Feed</string>
    <string name="hide_editor_newsfeed_summary">When enabled, the status editor will be hidden on the News Feed.</string>
    <string name="hide_editor_newsfeed_snackbar">Reload for changes to take effect</string>

    <string name="stop_images_title">Don\'t load images</string>
    <string name="stop_images_summary">When enabled, will not download images. Some images may remain in the cache.</string>

    <string name="hide_sponsored_title">Hide "Sponsored" Content</string>
    <string name="hide_sponsored_summary">When enabled, will hide "Sponsored" Content (ads) from the News Feed.</string>

    <string name="hide_birthdays_title">Hide Birthdays</string>
    <string name="hide_birthdays_summary">When enabled, will hide birthdays from the News Feed.</string>

    <string name="navigation_setting_title">Navigation</string>

    <string name="hide_menu_bar_title">Hide Menu bar</string>
    <string name="hide_menu_bar_summary">When enabled, the Facebook Menu bar will be hidden.</string>

    <string name="hide_fab_on_scroll_title">Hide Floating Action Button on scroll</string>
    <string name="hide_fab_on_scroll_summary">Hide the FAB when scrolling down</string>

    <string name="messaging_enabled_title">Messaging</string>
    <string name="messaging_enabled_summary">When enabled, will provide access to Facebook Messages. Disable if you have a messaging app.</string>

    <string name="back_button_enabled_title">Back button</string>
    <string name="back_button_enabled_summary">When enabled, the back button will be visible in the draw.</string>

    <string name="jump_top_enabled_title">Jump to Top button</string>
    <string name="jump_top_enabled_summary">When enabled, the Jump to Top button will be visible in the draw.</string>

    <string name="login_button">Login</string>
    <string name="share_text">Share</string>
    <string name="fb">Facebook</string>
    <string name="tw">Twitter</string>
    <string name="not_logged_in">You are not logged in</string>
    <string name="error_login">Something went wrong, please try logging in again</string>
    <string name="error_super_wrong">Something went super wrong</string>
    <string name="error_facebook_noconnection">Could not access Facebook</string>
    <string name="error_facebook_error">Something went wrong on Facebook\'s end</string>

    <string name="loading">Loading</string>
    <string name="notification_multiple_text">%s new notifications.</string>
    <string name="notification_viewall">View all Notifications</string>

    <string name="permission_denied">Permission denied, cannot complete action</string>
    <string name="title_activity_twitter">TwitterActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tw">TwActivity</string>

    <string name="more_apps">More Apps</string>
    <string name="source_code">Source code on Github</string>
    <string name="more_apps_summary">Have a look at the apps of the developer</string>
    <string name="go_premium">Get Premium</string>
    <string name="pref_cat_general">General</string>
    <string name="pref_about">About</string>
    <string name="more">Credits.</string>
    <string name="about_translations">Help, we need you</string>
    <string name="bug">Report bugs or request new features</string>
    <string name="changelog">Changelog</string>
</resources>
