<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/go_premium">
        <PreferenceScreen
            android:summary="Experience ad free and more features like 'DARK MODE', 'COLOURFUL THEMES', 'BETTER NOTIFICATIONS' from our PRO version app. "
            android:title="Get the Pro version">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=apps.shark.socialpro"/>
        </PreferenceScreen>
      <!--  <CheckBoxPreference
            android:defaultValue="false"
            android:key="notifications_enabled"
            android:summary="@string/notifications_enabled_summary"
            android:title="@string/notifications_enabled_title" />
        <ListPreference
            android:title="@string/notification_interval_title"
            android:summary="@string/notification_interval_summary"
            android:key="notification_interval"
            android:defaultValue="600000"
            android:entries="@array/notification_interval"
            android:entryValues="@array/notification_interval_values"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_vibration"
            android:summary="@string/notifications_vibration_summary"
            android:title="@string/notifications_vibration_title" /> -->


    <PreferenceScreen
        android:summary="@string/more_apps_summary"
        android:title="@string/more_apps">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://play.google.com/store/apps/developer?id=SHARK+App+Development"/>
    </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/content_setting_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="location_enabled"
            android:summary="@string/location_enabled_summary"
            android:title="@string/location_enabled_title" />
        <PreferenceScreen
            android:summary="Enjoy Facebook in Dark Mode"
            android:title="Dark Mode (PRO)">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=apps.shark.socialpro"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="Enjoy Facebook in Data saving Mode"
            android:title="Data save Mode (PRO)">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=apps.shark.socialpro"/>
        </PreferenceScreen>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="most_recent_menu"
            android:summary="@string/most_recent_menu_summary"
            android:title="@string/most_recent_menu_title" />
        <PreferenceScreen
            android:summary="Enjoy Facebook in the color you like the most.Get Active Pro app and enjoy your time.. "
            android:title="Colourful themes (PRO)">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=apps.shark.socialpro"/>
        </PreferenceScreen>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_editor_newsfeed"
            android:summary="@string/hide_editor_newsfeed_summary"
            android:title="@string/hide_editor_newsfeed_title" />
       <CheckBoxPreference
            android:defaultValue="false"
            android:key="stop_images"
            android:summary="@string/stop_images_summary"
            android:title="@string/stop_images_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hide_sponsored"
            android:summary="@string/hide_sponsored_summary"
            android:title="@string/hide_sponsored_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hide_birthdays"
            android:summary="@string/hide_birthdays_summary"
            android:title="@string/hide_birthdays_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/navigation_setting_title">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="hide_menu_bar"
            android:summary="@string/hide_menu_bar_summary"
            android:title="@string/hide_menu_bar_title" />
       <!-- <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_fab_on_scroll"
            android:summary="@string/hide_fab_on_scroll_summary"
            android:title="@string/hide_fab_on_scroll_title" /> -->
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="back_button_enabled"
            android:summary="@string/back_button_enabled_summary"
            android:title="@string/back_button_enabled_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="messaging_enabled"
            android:summary="@string/messaging_enabled_summary"
            android:title="@string/messaging_enabled_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="jump_top_enabled"
            android:summary="@string/jump_top_enabled_summary"
            android:title="@string/jump_top_enabled_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/more">

        <Preference android:title="@string/more" android:summary="Developed by Harsha pulikollu"/>

        <PreferenceScreen
            android:title="@string/source_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/harshapulikollu/Active"/>
        </PreferenceScreen>
        <PreferenceScreen
            android:title="@string/bug">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/harshapulikollu/Active/issues"/>
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>